# worldground

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  worldgen.toml
.claude/: settings.json
.prawduct/: .cross-repo-edits  critic-review.md  learnings.md  project-state.yaml
.prawduct/artifacts/: build-plan.md  configuration-spec.md  data-model.md  dependency-manifest.md  nonfunctional-requirements.md  operational-spec.md  product-brief.md  security-model.md  test-specifications.md  websocket-api-spec.md
.prawduct/framework-observations/: 2026-02-21-catastrophic-desertification-from-humidity-blending-formula.yaml  2026-02-21-stale-bit-identical-parity-claims-survive.yaml
.prawduct/working-notes/: framework-observations-2026-02-20.yaml  spherical-world-investigation.md
rules/conditions/: 01-soil-moisture.rhai  02-snow-and-mud.rhai
rules/resources/: 01-regeneration.rhai
rules/terrain/: 01-biome-pressure.rhai  02-vegetation-health.rhai  03-biome-transition.rhai
rules/weather/: 01-base-temperature.rhai  01-wind-temperature.rhai  02-humidity.rhai  02-precipitation.rhai  03-clouds-precipitation.rhai  04-storms.rhai
src/: lib.rs  main.rs
src/cli/: commands.rs
src/config/: generation.rs  mod.rs  simulation.rs
src/persistence/: mod.rs  snapshot.rs
src/server/: mod.rs  protocol.rs
src/simulation/: engine.rs  macro_weather.rs  mod.rs  native_eval.rs  native_weather.rs  phase.rs  sphere_math.rs  statistics.rs
src/world/: generation.rs  mod.rs  tile.rs  topology.rs  (+1 more)
tools/: generate-hero-gif.py  product-hook
viewer/: index.html
(+21 files in other folders)
