[package]
name = "worldground"
version = "0.1.0"
edition = "2024"
description = "A perpetual world simulation engine with configurable terrain evolution rules"

[dependencies]
rhai = { version = "1", features = ["sync"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"
noise = "0.9"
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
